--- a/MyPlist.plist
+++ b/MyPlist.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/zhixingxi/TestIpa/blob/master/LeftEarTest.ipa</string>
+					<string>http://10.191.72.167/LeftEarTest.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -19,7 +19,7 @@
 				<key>title</key>
 				<string>右耳</string>
 				<key>bundle-version</key>
-				<string>1</string>
+				<string>1.0</string>
 				<key>releaseNotes</key>
 				<string>测试</string>
 				<key>kind</key>
