--- a/MyPlist.plist
+++ b/MyPlist.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>/Volumes/ios/RightEar/测试版/RightEar_release_1.0.0_3.ipa</string>
+					<string>http://10.191.80.224/Volumes/ios/RightEar/测试版/RightEar_release_1.0.0_3.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
