--- a/MyPlist.plist
+++ b/MyPlist.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://10.191.72.167/LeftEarTest.ipa</string>
+					<string>这里是你ipa包的下载地址</string>
 				</dict>
 			</array>
 			<key>metadata</key>
